# odrParser

./: CMakeLists.txt  main.cpp
OdrManager/: OdrBbox.hh  OdrGeoCoord.hh  OdrLaneCoord.hh  OdrManager.hh  OdrManagerLite.hh  OdrParserCallback.hh  OdrProjection.hh  OdrTrackCoord.hh  OpenDRIVE.hh
OdrManager/AdditionNodes/: OdrHierCoord.hh  OdrReader.hh  OdrReaderXML.hh  OdrRoadQuery.hh
OdrManager/BaseNodes/: OdrBorder.hh  OdrBridge.hh  OdrControlEntry.hh  OdrController.hh  OdrCornerInertial.hh  OdrCornerLocal.hh  OdrCornerReference.hh  OdrCornerRelative.hh  OdrCornerRoad.hh  OdrCrossfall.hh  OdrDataQuality.hh  OdrElevation.hh  OdrErrorDesc.hh  OdrGenericNode.hh  OdrGeoHeader.hh  OdrGeoNode.hh  OdrGeoReference.hh  OdrHeader.hh  OdrJuncController.hh  OdrJuncGroup.hh  OdrJuncHeader.hh  OdrJuncLaneLink.hh  OdrJuncLink.hh  OdrJuncPriority.hh  OdrJuncRef.hh  OdrLane.hh  OdrLaneAccess.hh  OdrLaneBorder.hh  OdrLaneHeight.hh  OdrLaneLink.hh  OdrLaneMaterial.hh  OdrLaneOffset.hh  OdrLaneRule.hh  OdrLaneSection.hh  OdrLaneSpeed.hh  OdrLaneValidity.hh  OdrLaneVisibility.hh  OdrLaneWidth.hh  OdrLateralShape.hh  OdrMarking.hh  (+35 more)
data/: CAexample.xodr  Crossing8Course.xodr  IVISTA.xodr  MT_intersection_ego_1lane.xodr  map.xodr  ramp_1lane_y.xodr  新建文本文档.txt
include/: CaEnum.h  CaStruct.h  IStruct.h  ShareMessage.h  dynamiciMessage.h  positionInfo.h  pureOdrParse.h  staticMessage.h  tinyxml2.h
include/TinyXml/: tinystr.h  tinyxml.h
include/jinx/: DataOperation.h
src/: dynamicMessage.cpp  positionInfo.cpp  pureOdrParse.cpp  staticMessage.cpp
src/CA/: dynamicMessage.cpp  staticMessage.cpp
src/customParse/: ShareMessage.cpp
src/jinx/: DataOperation.cpp
src/tool/: tinyxml2.cpp
test/: CMakeLists.txt  IEvalTest.cpp  ISimTest.cpp  getLaneinfo.cpp  getPosInfoClassTest.cpp  getPureOdrInfo.cpp  getV3.cpp  jinxTest.cpp  receiveAndSend.cpp  receiveOnly.cpp  sendServer.cpp  waitSendSevrver.cpp
